[gd_scene load_steps=35 format=3 uid="uid://wld15nn6finb"]

[ext_resource type="Script" path="res://Scripts/RigidBody2D.gd" id="1_fllg3"]
[ext_resource type="PackedScene" uid="uid://cxudrq13ouorw" path="res://Scenes/proyectiles/poem1.tscn" id="2_msaqi"]
[ext_resource type="Texture2D" uid="uid://bs6hb28ab3lnj" path="res://Assets/Poet/walk.png.png" id="3_46ksn"]
[ext_resource type="PackedScene" uid="uid://dhc538kwt8tw5" path="res://Scenes/proyectiles/poem2.tscn" id="3_p17q3"]
[ext_resource type="Texture2D" uid="uid://bxlqlsuard66h" path="res://Assets/Poet/walkup.png.png" id="4_4f5ih"]
[ext_resource type="PackedScene" uid="uid://cgyendsxhjx0d" path="res://Scenes/proyectiles/poem3.tscn" id="4_c8dik"]
[ext_resource type="Texture2D" uid="uid://bmlnu73u1nrci" path="res://Assets/Poet/walkdown.png.png" id="5_ch01h"]
[ext_resource type="PackedScene" uid="uid://foqeg24qpfb8" path="res://Scenes/proyectiles/poem4.tscn" id="5_kueu4"]
[ext_resource type="Texture2D" uid="uid://dpqossalfuhh3" path="res://Assets/Poet/poeta_muerte.png" id="6_74rl6"]
[ext_resource type="PackedScene" uid="uid://0b7jhq5qhbt8" path="res://Scenes/proyectiles/ball1.tscn" id="6_xyquy"]
[ext_resource type="Texture2D" uid="uid://cvhust3qmmco2" path="res://Assets/Poet/attack.png" id="7_64b7d"]
[ext_resource type="PackedScene" uid="uid://w0clo2o1sw4v" path="res://Scenes/proyectiles/ball2.tscn" id="7_jlvw7"]
[ext_resource type="PackedScene" uid="uid://dt11jc4tnw2q7" path="res://Scenes/proyectiles/ball3.tscn" id="8_n5mfg"]
[ext_resource type="PackedScene" uid="uid://vqtmf678lnqh" path="res://Scenes/proyectiles/ball4.tscn" id="9_0akdw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2uill"]
size = Vector2(46, 46)

[sub_resource type="Animation" id="Animation_4fixi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Icon2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Icon3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Icon4:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Icon5:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vygh8"]
resource_name = "attack"
length = 1.05
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon5:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0, 1, 0, 1, 0]
}

[sub_resource type="Animation" id="Animation_62ft1"]
resource_name = "dead"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon4:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_3yh1k"]
resource_name = "walk"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 2]
}

[sub_resource type="Animation" id="Animation_r564p"]
resource_name = "walk_down"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.5, 0.9, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 2, 0, 1]
}

[sub_resource type="Animation" id="Animation_l1y4e"]
resource_name = "walk_up"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.5, 0.9, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oi6ka"]
_data = {
"RESET": SubResource("Animation_4fixi"),
"attack": SubResource("Animation_vygh8"),
"dead": SubResource("Animation_62ft1"),
"walk": SubResource("Animation_3yh1k"),
"walk_down": SubResource("Animation_r564p"),
"walk_up": SubResource("Animation_l1y4e")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l6lh3"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n3s65"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wublr"]
animation = &"walk_up"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ga4kq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tu461"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gjvr4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hcjgl"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d801q"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0gg5r"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4hshe"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qh60o"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_abgdi"]
states/End/position = Vector2(1072, 262)
states/Start/position = Vector2(103, 262)
states/attack/node = SubResource("AnimationNodeAnimation_l6lh3")
states/attack/position = Vector2(537, 86)
states/walk_down/node = SubResource("AnimationNodeAnimation_n3s65")
states/walk_down/position = Vector2(351, 262)
states/walk_up/node = SubResource("AnimationNodeAnimation_wublr")
states/walk_up/position = Vector2(725, 262)
transitions = ["walk_down", "walk_up", SubResource("AnimationNodeStateMachineTransition_ga4kq"), "Start", "walk_down", SubResource("AnimationNodeStateMachineTransition_tu461"), "walk_up", "End", SubResource("AnimationNodeStateMachineTransition_gjvr4"), "walk_down", "attack", SubResource("AnimationNodeStateMachineTransition_hcjgl"), "attack", "walk_down", SubResource("AnimationNodeStateMachineTransition_d801q"), "walk_up", "attack", SubResource("AnimationNodeStateMachineTransition_0gg5r"), "attack", "walk_up", SubResource("AnimationNodeStateMachineTransition_4hshe"), "walk_up", "walk_down", SubResource("AnimationNodeStateMachineTransition_qh60o")]

[node name="EnemyCharacter" type="Node2D"]

[node name="RigidBody2D" type="RigidBody2D" parent="."]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_fllg3")
poem1_scene = ExtResource("2_msaqi")
poem2_scene = ExtResource("3_p17q3")
poem3_scene = ExtResource("4_c8dik")
poem4_scene = ExtResource("5_kueu4")
ball1_scene = ExtResource("6_xyquy")
ball2_scene = ExtResource("7_jlvw7")
ball3_scene = ExtResource("8_n5mfg")
ball4_scene = ExtResource("9_0akdw")

[node name="Icon" type="Sprite2D" parent="RigidBody2D"]
visible = false
position = Vector2(1113, 44)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_46ksn")
hframes = 3

[node name="Icon2" type="Sprite2D" parent="RigidBody2D"]
visible = false
position = Vector2(1114, 43)
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_4f5ih")
hframes = 3
frame = 2

[node name="Icon3" type="Sprite2D" parent="RigidBody2D"]
visible = false
position = Vector2(1113, 43)
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_ch01h")
hframes = 3
frame = 1

[node name="Icon4" type="Sprite2D" parent="RigidBody2D"]
visible = false
position = Vector2(1113, 43)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_74rl6")
hframes = 3
frame = 1

[node name="Icon5" type="Sprite2D" parent="RigidBody2D"]
visible = false
position = Vector2(1112, 44)
scale = Vector2(0.1, 0.1)
texture = ExtResource("7_64b7d")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(1113, 44)
shape = SubResource("RectangleShape2D_2uill")

[node name="CenterBullet" type="Marker2D" parent="RigidBody2D"]
position = Vector2(1095, 45)
gizmo_extents = 5.0

[node name="TopBullet" type="Marker2D" parent="RigidBody2D"]
position = Vector2(1095, 28)
gizmo_extents = 5.0

[node name="BottomBullet" type="Marker2D" parent="RigidBody2D"]
position = Vector2(1095, 60)
gizmo_extents = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="RigidBody2D"]
libraries = {
"": SubResource("AnimationLibrary_oi6ka")
}

[node name="AnimationTree" type="AnimationTree" parent="RigidBody2D"]
tree_root = SubResource("AnimationNodeStateMachine_abgdi")
anim_player = NodePath("../AnimationPlayer")

[connection signal="body_entered" from="RigidBody2D" to="RigidBody2D" method="_on_body_entered"]
